# unipercept

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pyre_configuration  .readthedocs.yaml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  conda.yml  debug.env  environment.yml  outputs  pyproject.toml  scratch  setup.py
.fleet/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
benchmarks/: conftest.py  data_loader.py  test_data_loader.py  test_truth_generator.py
checkpoints/deqflow/: huge-things.pth
checkpoints/multidvps/: demo.safetensors  demo.yaml
configs/: README.md
configs/cityscapes/: _data.py  _dataset.py  deqflow.py  multidvps_convnextl.py  multidvps_convnexts.py  multidvps_resnet18.py  multidvps_resnet18_fast.py  multidvps_resnet50.py  multidvps_swinb.py
configs/cityscapes/data/: _dvps.py  _panoptic.py
configs/kitti/: multidvps_resnet50.py
configs/kitti/data/: _sem.py
configs/kitti_360/: _data.py  _dataset.py  multidvps_resnet50.py
configs/kitti_sem/: multidvps_resnet50.py
configs/kitti_sem/data/: _dvps.py
configs/pascal_voc/: toy_segmenter.py
configs/pascalvoc/: multidvps_resnet50.py
configs/pascalvoc/data/: _panoptic.py
configs/ytcollision/: risknet_resnet50.py
configs/ytcollision/data/: _risk.py
docs/: Makefile  conf.py  requirements.txt
docs/source/: api.rst  conf.py  index.rst  macros.hrst  usage.rst
notebooks/: activations.ipynb  backbones.ipynb  camera.ipynb  dataset.ipynb  demo_backbones.ipynb  demo_data_pseudo.ipynb  demo_engine.ipynb  demo_nn.ipynb  demo_render.ipynb  depth_and_camera.ipynb  depth_tensors.ipynb  evaluation.ipynb  layers.py  losses.ipynb  multidvps.ipynb  multidvps_gt.ipynb  pseudo.ipynb  tensordict.ipynb  training.ipynb  wandb.ipynb
scratch/: experiment_tensordict.py  fix-instances-kitti360.ipynb
scripts/: coverage.sh  create_testing_assets.py  get_disk_usage.py  hpc_env.sh  hpc_run.sh  install-conda.sh  install-pil-simd.sh  install-pillow.sh  install.sh  labeltree.py  open3d-pointcloud.py  open3d_pointcloud.py  run.py  run.sh  wandb_cleanup.py
scripts/preprocessing/: cityscapes_generate_depth.py
sources/unicli/: __init__.py  __main__.py  _cmd.py  _config.py  _info.py  _utils.py  backbones.py  check.py  describe.py  echo.py  infer.py  profile.py  train.py
sources/unimodels/: __init__.py
sources/unimodels/deqflow/: __init__.py  _model.py
sources/unimodels/multidvps/: __init__.py  _model.py  keys.py  trackers.py  visuals.py
sources/unimodels/risknet/: __init__.py  _model.py
sources/unimodels/toys/: __init__.py  _classification.py  _monodepth.py  _semseg.py
sources/unipercept/: __init__.py  __init__.pyi  _api.py  _api_config.py  _api_data.py  _monkeypatch.py  _patch_tensordict_pytree.py  config.py  file_io.py  log.py  model.py  py.typed  state.py  state.pyi  test_state.py  types.py
sources/unipercept/cli/: __init__.py  __main__.py  _command.py  _config.py  _utils.py  backbones.py  check.py  datasets.py  du.py  echo.py  evaluate.py  export.py  launch.py  path.py  profile.py  ros2.py  run.py  show.py  surgeon.py  trace.py  train.py
sources/unipercept/config/: __init__.py  _env.py  _helpers.py  _hp.py  _lazy.py  env.py  language.py  lazy.py  templates.py
sources/unipercept/data/: __init__.py  __init__.pyi  _config.py  _helpers.py  _loader.py  _sampler.py  collect.py  ops.py  pseudolabeler.py  tokenizer.py
sources/unipercept/engine/: __init__.py  _engine.py  _optimizer.py  _params.py  _scheduler.py  _trial.py  _types.py  _writer.py  accelerate.py  callbacks.py  debug.py  memory.py  writer.py
sources/unipercept/environments/: __init__.py
sources/unipercept/evaluators/: __init__.py  _base.py  _common.py  _depth.py  _dvps.py  _export.py  _mot.py  _panoptic.py  depth.py  dvps.py  helpers.py  segmentation.py  torchmetrics.py  tracking.py
sources/unipercept/integrations/: __init__.py  __init__.pyi  slurm_integration.py  wandb.py  wandb_integration.py
sources/unipercept/model/: __init__.py  __init__.pyi  _base.py  _io.py  toys.py
sources/unipercept/modeling/: __init__.py  _model.py  typings.py
sources/unipercept/nn/: __init__.py  __init__.pyi  _args.py  activations.py  init.py  norms.py  point_rend.py  smooth.py  wrappers.py
sources/unipercept/render/: __init__.py  _colormap.py  _plot.py  _video.py  _visualizer.py  terminal.py  utils.py
sources/unipercept/trainer/: __init__.py  _optimizer.py  _optimizer.pyi  _scheduler.py  _scheduler.pyi  _trainer.py  _trial.py  _types.py  callbacks.py  config.py  debug.py  memory.py  search.py
sources/unipercept/utils/: __init__.py  __init__.pyi  abbreviate.py  box.py  camera.py  catalog.py  check.py  cli.py  cuda.py  datainfo.py  dataserial.py  dataset.py  decorators.py  descriptors.py  dicttools.py  distributed.py  formatter.py  frozendict.py  function.py  generics.py  geometry.py  image.py  inspect.py  iopath_environ.py  iopath_handlers.py  iopath_path.py  iopath_wandb.py  iopath_webdav.py  logutils.py  mask.py  matchable.py  memory.py  missing.py  module.py  pickle.py  registry.py  seed.py  signal.py  state.py  state.pyi  (+7 more)
sources/unipercept/vision/: __init__.py  coord.py  filter.py  geometry.py  point.py
sources/uniutils/: __init__.py  camera.py  dicttools.py  function.py  inspect.py  logutils.py  mask.py  seed.py  state.py  state.pyi  tensor.py
sources/uniutils/config/: __init__.py  _env.py  _helpers.py  _lazy.py  _tracker.py  templates.py
sources/uniutils/render/: _visualizer.py  utils.py
tests/: conftest.py
tests/configs/: conftest.py  test_canonical.py  test_train.py
tests/sources/: test_import.py
tests/sources/unicli/: test_cli_train.py
tests/sources/unimodels/: test_multidvps.py
tests/unicli/: conftest.py  test_cli.py  test_cli_echo.py  test_cli_infer.py
tests/unipercept/: conftest.py  test_api.py  test_config.py  test_file_io.py  test_model.py
tests/unipercept/data/: test_data_tokenizer.py  test_ops.py  test_points.py  test_sampler.py  (+1 more)
tests/uniutils/: test_abbreviate.py  test_dicttools.py  test_mask.py
~/test/: meta.json
(+410 files in other folders)
