[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
keywords = [
    "perception",
    "computer vision",
    "deep learning",
    "object detection",
    "instance segmentation",
    "semantic segmentation",
]
name = "unipercept"
description = "UniPecept: A unified framework for perception tasks focusing on research applications that require a high degree of flexibility and customization."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Kurt Stolle", email = "k.h.w.stolle@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "tensordict >= 0.3.0",
    "einops >= 0.7.0",
    "timm >= 0.6.14",
    "bullet >= 2.2.0",
    "accelerate >= 0.27.0",
    "statistics",
    "h5py",
    "opencv-python",
    "omegaconf",
    "hydra-core",
    "unitrack",
    "iopath",
    "torchdata",
    "fvcore",
    "transformers",
    "seaborn",
    "matplotlib",
    "tabulate",
    "termcolor",
    "pycocotools",
    "ftfy",
]
dynamic = ["version"]

[project.scripts]
unipercept = "unipercept.cli:__main__"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
unipercept = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "unipercept.__version__" }

[tool.setuptools.packages.find]
where = ["sources"]
include = ["uni*"]
exclude = ["tests"]
namespaces = false

[project.optional-dependencies]

tests = [
    "hypothesis",
    "bandit[toml]",
    "black>=23.10.0",
    "check-manifest",
    "flake8",
    "flake8-bugbear",
    "flake8-docstrings",
    "flake8-formatter_junit_xml",
    "flake8-import-conventions",
    "flake8-unused-arguments",
    "flake8-comprehensions",
    "flake8-errmsg",
    "flake8-logging-format",
    "flake8-pie",
    "flake8-pyi",
    "flake8-pytest-style",
    "flake8-return",
    "flake8-2020",
    "flake8-executable",
    "flake8-simplify",
    "flake8-black",
    "flake8-pyproject",
    "pre-commit",
    "pygrep",
    "isort",
    "pandas-vet",
    "refurb",
    "pylint",
    "pylint_junit",
    "pytest",
    "pytest-sugar",
    "pytest-xdist",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-mock",
    "pytest-runner",
    "pytest-github-actions-annotate-failures",
    "shellcheck-py",
    "pylint",
    "mypy",
    "autoflake",
    "pydocstyle",
    "pyre-check",
    "pydocstringformatter",
    "pyrefact",
    "pyflakes",
    "mccabe",
]
notebooks = [
    "jupyterlab",
    "ipywidgets",
    "ipykernel",
    "ipython-autotime",
    "matplotlib",
    "seaborn",
]
docs = ["sphinx", "sphinx-rtd-theme", "numpydoc"]

[tool.pydocstringformatter]
write = true
strip-whitespaces = true
split-summary-body = false
numpydoc-section-hyphen-length = false

[tool.bandit]
exclude_dirs = [
    "build",
    "dist",
    "tests",
    "scripts",
    "configs",
    "docs",
    "output",
    "datasets",
    "dependencies",
    "benchmarks",
]
number = 4
recursive = true
targets = "sources"

[tool.black]
line-length = 88
fast = true
target-version = ['py311']

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100

[tool.flake8]
docstring-convention = "numpy"
max-complexity = 50
max-line-length = 80
extend-select = [
    "F",    # flake8
    "B",    # flake8-bugbear
    "B901", # 
    "B902", # 
    "B903", #
    "BLK",  # flake8-black
    "C",    # mccabe
    "I",    # isort
    "ARG",  # flake8-unused-arguments
    "C4",   # flake8-comprehensions
    "EM",   # flake8-errmsg
    "ICN",  # flake8-import-conventions
    "G",    # flake8-logging-format
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PL",   # pylint
    "PT",   # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "T20",  # flake8-print
    "UP",   # pyupgrade
    "YTT",  # flake8-2020
    "EXE",  # flake8-executable
    "NPY",  # NumPy specific rules
    "PD",   # pandas-vet
    "FURB", # refurb
    "PYI",  # flake8-pyi
]
per-file-ignores = """
    __init__.py: F401, F403
    __init__.pyi: F401, F403
    tests/**/*.py: T20, D, PD, NPY
    tests/**/conftest.py: F401, F403, E402
"""
extend-ignore = [
    # "E203", # whitespace before ':'
    "E501", # line too long
    # "E722", # do not use bare 'except'
    # "W503", # line break before binary operator
    "B001", # assert used
    "D200", # One-line docstring should fit on one line with quotes
]
exclude = [
    ".eggs",
    ".git",
    ".tox",
    "nssm",
    "obj",
    "out",
    "packages",
    "pywin32",
    "tests",
    "swagger_client",
    # "*.pyi",
]


[tool.pyright]
include = ["sources"]
reportPrivateImportUsage = false
reportMissingImports = true
reportMissingTypeStubs = false
strictListInference = true
strictSetInference = true
reportImportCycles = true
reportMatchNotExhaustive = true
reportShadowedImports = true
reportImplicitOverride = "warning"
pythonVersion = "3.11"
pythonPlatform = "Linux"
exclude = ["datasets", "dependencies", "output", "**/prototypes"]
executionEnvironments = [{ root = "sources" }]

[tool.autoflake]
check = false
exclude = [
    "configs/**/*",
    "__init__.py",
    "tests/**/*",
    "configs/**/*",
    "docs/**.*",
]
imports = [
    "requests",
    "torch",
    "transformers",
    "torchvision",
    "tensordict",
    "unitrack",
    "tensordict",
    "einops",
    "timm",
]
recursive = true
ignore_init_module_imports = true
expand_star_imports = true

[tool.pytest.ini_options]
addopts = "--doctest-modules -m 'not integration' -m 'not gpu' --benchmark-disable"
pythonpath = ["sources"]
testpaths = "tests"
junit_family = "xunit2"
junit_suite_name = "tests"
markers = [
    "integration: marks as integration test",
    "notebooks: marks as notebook test",
    "gpu: marks as gpu test",
    "slow: marks tests as slow",
    "unit: fast offline tests",
]

[tool.pylint]
extension-pkg-whitelist = [
    "numpy",
    "torch",
    "cv2",
    "pyodbc",
    "pydantic",
    "ciso8601",
    "netcdf4",
    "scipy",
    "pandas",
    "wandb"
]
ignore = "CVS"
ignore-patterns = "test.*?py,conftest.py,.*?_test.py"
init-hook = 'import sys; sys.setrecursionlimit(4 * sys.getrecursionlimit())'
jobs = 0
limit-inference-results = 100
persistent = "yes"
suggestion-mode = "yes"
unsafe-load-any-extension = "no"
include = ["sources"]

# [tool.pylint.'MESSAGES CONTROL']
# enable = "c-extension-no-member"

# [tool.pylint.'REPORTS']
# evaluation = "10.0 - ((float(5 * error + warning + refactor + convention) / statement) * 10)"
# output-format = "text"
# reports = "no"
# score = "yes"

# [tool.pylint.'REFACTORING']
# max-nested-blocks = 5
# never-returning-functions = "sys.exit"

# [tool.pylint.'BASIC']
# argument-naming-style = "snake_case"
# attr-naming-style = "snake_case"
# bad-names = ["foo", "bar"]
# class-attribute-naming-style = "any"
# class-naming-style = "PascalCase"
# const-naming-style = "UPPER_CASE"
# docstring-min-length = -1
# function-naming-style = "snake_case"
# good-names = ["i", "j", "k", "ex", "Run", "_"]
# include-naming-hint = "yes"
# inlinevar-naming-style = "any"
# method-naming-style = "snake_case"
# module-naming-style = "any"
# no-docstring-rgx = "^_"
# property-classes = "abc.abstractproperty"
# variable-naming-style = "snake_case"

# [tool.pylint.'FORMAT']
# ignore-long-lines = "^\\s*(# )?.*['\"]?<?https?://\\S+>?"
# indent-after-paren = 4
# indent-string = '    '
# max-line-length = 88
# max-module-lines = 1000
# single-line-class-stmt = "no"
# single-line-if-stmt = "no"

# [tool.pylint.'LOGGING']
# logging-format-style = "old"
# logging-modules = "logging"

# [tool.pylint.'MISCELLANEOUS']
# notes = ["FIXME", "XXX", "TODO"]

# [tool.pylint.'SIMILARITIES']
# ignore-comments = "yes"
# ignore-docstrings = "yes"
# ignore-imports = "yes"
# min-similarity-lines = 7

# [tool.pylint.'SPELLING']
# max-spelling-suggestions = 4
# spelling-store-unknown-words = "no"

# [tool.pylint.'STRING']
# check-str-concat-over-line-jumps = "no"

# [tool.pylint.'TYPECHECK']
# contextmanager-decorators = "contextlib.contextmanager"
# generated-members = "numpy.*,np.*,pyspark.sql.functions,collect_list"
# ignore-mixin-members = "yes"
# ignore-none = "yes"
# ignore-on-opaque-inference = "yes"
# ignored-classes = "optparse.Values,thread._local,_thread._local,numpy,torch,swagger_client"
# ignored-modules = "numpy,torch,swagger_client,netCDF4,scipy"
# missing-member-hint = "yes"
# missing-member-hint-distance = 1
# missing-member-max-choices = 1

# [tool.pylint.'VARIABLES']
# additional-builtins = "dbutils"
# allow-global-unused-variables = "yes"
# callbacks = ["cb_", "_cb"]
# dummy-variables-rgx = "_+$|(_[a-zA-Z0-9_]*[a-zA-Z0-9]+?$)|dummy|^ignored_|^unused_"
# ignored-argument-names = "_.*|^ignored_|^unused_"
# init-import = "no"
# redefining-builtins-modules = "six.moves,past.builtins,future.builtins,builtins,io"

# [tool.pylint.'CLASSES']
# defining-attr-methods = ["__init__", "__new__", "setUp", "__post_init__"]
# exclude-protected = ["_asdict", "_fields", "_replace", "_source", "_make"]
# valid-classmethod-first-arg = "cls"
# valid-metaclass-classmethod-first-arg = "cls"

# [tool.pylint.'DESIGN']
# max-args = 5
# max-attributes = 7
# max-bool-expr = 5
# max-branches = 12
# max-locals = 15
# max-parents = 7
# max-public-methods = 20
# max-returns = 6
# max-statements = 50
# min-public-methods = 2

# [tool.pylint.'IMPORTS']
# allow-wildcard-with-all = "no"
# analyse-fallback-blocks = "no"
# deprecated-modules = "optparse,tkinter.tix"

# [tool.pylint.'EXCEPTIONS']
# overgeneral-exceptions = ["BaseException", "Exception"]

[tool.isort]
profile = "black"
add_imports = ["from __future__ import annotations"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = false
warn_unused_ignores = true
check_untyped_defs = false
no_implicit_optional = true
exclude = [
    "^tests/.*",
    "^configs/.*",
    "^docs/.*",
    "^output/.*",
    "^datasets/.*",
    "^benchmarks/.*",
]
packages = ["unipercept"]
